2008-03-28  Eric Hodel  <drbrain@segment7.net>

	* bin/gem, Rakefile:  RubyGems now requires Ruby > 1.8.3.
	* lib/rubygems.rb:  Added Gem.ruby_version, Gem.read_binary,
	Gem.binary_mode.
	* lib/, test/:  Read files in binary mode for windows and ruby 1.9.
	* doc/release_notes/rel_1_1_0.rdoc:  RubyGems 1.1.0 release notes.
	* lib/rubygems/rubygems_version.rb:  1.1.0.

2008-03-28  Ryan Woodrum  <rwoodrum@avvo.com>

	* lib/rubygems/commands/query_command.rb: Add --installed
	subcommand to check if a gem and/or version is installed.
	* test/test_gem_commands_query_command.rb: Add relevant tests.
	* test/gemutilities.rb: Override exit() for query tests.
	* test/mockgemui.rb: Add =() to manipulate output values (clear).

2008-03-28  Chad Woolley  <thewoolleyman@gmail.com>

	* lib/rubygems/source_info_cache.rb: Add reset_cache_file.

2008-03-27  Chad Woolley  <thewoolleyman@gmail.com>

	* lib/rubygems/user_interaction.rb: Raise Gem::SystemExitException
	instead of exiting, kill unused terminate_interaction!.
	* lib/rubygems/exceptions.rb: Add Gem::SystemExitException.
	* lib/rubygems/commands/install_command.rb: Raise
	Gem::SystemExitException instead of exiting.
	* bin/gem: Rescue Gem::SystemExitException and exit with
	specified exit_code.
	* test/test_gem_commands_install_command.rb: Assert on
	Gem::SystemExitException and exit_code in tests.

2008-03-27  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/sources_command.rb:  Allow sources to be
	removed without network.  Fixes bug #18644 by Mikel Lindsaar.

2008-03-27  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems/commands/environment_command.rb: Use platform specific
	PATH_SEPARATOR instead of hardcoded ':'
	* test/test_gem_commands_unpack_command.rb: Ditto.
	* test/test_gem_commands_environment_command.rb: Ditto.
	* test/gemutilities.rb: Fix binary file reads being truncated on
	Windows.
	* test/test_gem_commands_install_command.rb: Switch to read_binary.